crates/rymx/tests/snapshots/full__main@array_list.rym.snap
---
source: crates/rymx/tests/full.rs
expression: diag.outputs_dump() + &diag.reports_dump()
input_file: crates/rymx/tests/array_list.rym
---
--- tokenize ---
Comment [// struct Array[const len: usize, T] {]
VSpace [\n]
Comment [//     data: [len]T,]
VSpace [\n]
Comment [// }]
VSpace [\n\n]
Struct [struct]
HSpace [ ]
Ident [ArrayList]
BracketOpen [[]
Ident [T]
BracketClose []]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [    ]
Mut [mut]
HSpace [ ]
Ident [data]
Colon [:]
HSpace [ ]
Mut [mut]
HSpace [ ]
BracketOpen [[]
BracketClose []]
Ident [T]
Comma [,]
VSpace [\n]
HSpace [    ]
Mut [mut]
HSpace [ ]
Ident [length]
Colon [:]
HSpace [ ]
Ident [usize]
Comma [,]
VSpace [\n]
HSpace [    ]
Ident [allocator]
Colon [:]
HSpace [ ]
Mut [mut]
HSpace [ ]
Ident [Allocator]
Comma [,]
VSpace [\n]
BraceClose [}]
VSpace [\n\n]
Impl [impl]
BracketOpen [[]
Ident [T]
BracketClose []]
HSpace [ ]
Ident [ArrayList]
BracketOpen [[]
Ident [T]
BracketClose []]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [    ]
Comment [// From https://github.com/rust-lang/rust/blob/b9068315db4812abbbef317447e47e0c62d3652f/library/alloc/src/raw_vec.rs#L105C7-L116]
VSpace [\n]
HSpace [    ]
Comment [//]
VSpace [\n]
HSpace [    ]
Comment [// Tiny Vecs are dumb. Skip to:]
VSpace [\n]
HSpace [    ]
Comment [// - 8 if the element size is 1, because any heap allocators is likely]
VSpace [\n]
HSpace [    ]
Comment [//   to round up a request of less than 8 bytes to at least 8 bytes.]
VSpace [\n]
HSpace [    ]
Comment [// - 4 if elements are moderate-sized (<= 1 KiB).]
VSpace [\n]
HSpace [    ]
Comment [// - 1 otherwise, to avoid wasting too much space for very short Vecs.]
VSpace [\n]
HSpace [    ]
Const [const]
HSpace [ ]
Ident [MIN_NON_ZERO_CAP]
Colon [:]
HSpace [ ]
Ident [usize]
HSpace [ ]
Assign [=]
HSpace [ ]
If [if]
HSpace [ ]
Error [@]
Ident [size_of]
ParenOpen [(]
Ident [T]
ParenClose [)]
HSpace [ ]
Eq [==]
HSpace [ ]
Int [1]
HSpace [ ]
Then [then]
VSpace [\n]
HSpace [        ]
Int [8]
VSpace [\n]
HSpace [    ]
Else [else]
HSpace [ ]
If [if]
HSpace [ ]
Error [@]
Ident [size_of]
ParenOpen [(]
Ident [T]
ParenClose [)]
HSpace [ ]
LessThanEq [<=]
HSpace [ ]
Int [1024]
HSpace [ ]
Then [then]
VSpace [\n]
HSpace [        ]
Int [4]
VSpace [\n]
HSpace [    ]
Else [else]
VSpace [\n]
HSpace [        ]
Int [1]
Semi [;]
VSpace [\n\n]
HSpace [    ]
Ident [pub]
HSpace [ ]
Fn [fn]
HSpace [ ]
Ident [new]
ParenOpen [(]
VSpace [\n]
HSpace [        ]
Ident [allocator]
Colon [:]
HSpace [ ]
Mut [mut]
HSpace [ ]
Ident [Allocator]
HSpace [ ]
Assign [=]
HSpace [ ]
Mut [mut]
HSpace [ ]
Ident [DefaultAllocator]
Comma [,]
VSpace [\n]
HSpace [        ]
Ident [capacity]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [MIN_NON_ZERO_CAP]
VSpace [\n]
HSpace [    ]
ParenClose [)]
HSpace [ ]
UpperSelf [Self]
HSpace [ ]
Pipe [|]
HSpace [ ]
Ident [OutOfMemoryError]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [        ]
UpperSelf [Self]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [            ]
Ident [data]
Colon [:]
HSpace [ ]
Ident [allocator]
Dot [.]
Ident [alloc]
BracketOpen [[]
Ident [T]
BracketClose []]
ParenOpen [(]
Ident [capacity]
ParenClose [)]
Dot [.]
Ident [try]
Comma [,]
VSpace [\n]
HSpace [            ]
Ident [lenth]
Colon [:]
HSpace [ ]
Int [0]
Comma [,]
VSpace [\n]
HSpace [            ]
Ident [capacity]
Comma [,]
VSpace [\n]
HSpace [        ]
BraceClose [}]
VSpace [\n]
HSpace [    ]
BraceClose [}]
VSpace [\n\n]
HSpace [    ]
Ident [pub]
HSpace [ ]
Fn [fn]
HSpace [ ]
Ident [data]
ParenOpen [(]
LowerSelf [self]
Colon [:]
HSpace [ ]
UpperSelf [Self]
ParenClose [)]
HSpace [ ]
BracketOpen [[]
BracketClose []]
Ident [T]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [        ]
LowerSelf [self]
Dot [.]
Ident [data]
VSpace [\n]
HSpace [    ]
BraceClose [}]
VSpace [\n\n]
HSpace [    ]
Ident [pub]
HSpace [ ]
Fn [fn]
HSpace [ ]
Ident [data_mut]
ParenOpen [(]
LowerSelf [self]
Colon [:]
HSpace [ ]
Mut [mut]
HSpace [ ]
UpperSelf [Self]
ParenClose [)]
HSpace [ ]
Mut [mut]
HSpace [ ]
BracketOpen [[]
BracketClose []]
Ident [T]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [        ]
Mut [mut]
HSpace [ ]
LowerSelf [self]
Dot [.]
Ident [data]
VSpace [\n]
HSpace [    ]
BraceClose [}]
VSpace [\n\n]
HSpace [    ]
Ident [pub]
HSpace [ ]
Fn [fn]
HSpace [ ]
Ident [length]
ParenOpen [(]
LowerSelf [self]
Colon [:]
HSpace [ ]
UpperSelf [Self]
ParenClose [)]
HSpace [ ]
Ident [usize]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [        ]
LowerSelf [self]
Dot [.]
Ident [length]
VSpace [\n]
HSpace [    ]
BraceClose [}]
VSpace [\n\n]
HSpace [    ]
Ident [pub]
HSpace [ ]
Fn [fn]
HSpace [ ]
Ident [capacity]
ParenOpen [(]
LowerSelf [self]
Colon [:]
HSpace [ ]
UpperSelf [Self]
ParenClose [)]
HSpace [ ]
Ident [usize]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [        ]
LowerSelf [self]
Dot [.]
Ident [data]
Dot [.]
Ident [length]
VSpace [\n]
HSpace [    ]
BraceClose [}]
VSpace [\n\n]
HSpace [    ]
Ident [pub]
HSpace [ ]
Fn [fn]
HSpace [ ]
Ident [clear]
ParenOpen [(]
LowerSelf [self]
Colon [:]
HSpace [ ]
Mut [mut]
HSpace [ ]
UpperSelf [Self]
ParenClose [)]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [        ]
LowerSelf [self]
Dot [.]
Ident [length]
HSpace [ ]
Assign [=]
HSpace [ ]
Int [0]
Semi [;]
VSpace [\n]
HSpace [    ]
BraceClose [}]
VSpace [\n]
BraceClose [}]
VSpace [\n\n]
Comment [// TODO finish ArrayList implementation]
VSpace [\n\n]
Ident [test]
HSpace [ ]
String [\"Instantiation\"]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [    ]
Let [let]
HSpace [ ]
Ident [list]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [ArrayList]
BracketOpen [[]
Ident [u8]
BracketClose []]
Dot [.]
Ident [new]
ParenOpen [(]
ParenClose [)]
Semi [;]
VSpace [\n]
HSpace [    ]
Ident [assert_eq]
ParenOpen [(]
Ident [list]
Dot [.]
Ident [length]
ParenOpen [(]
ParenClose [)]
Comma [,]
HSpace [ ]
Int [0]
ParenClose [)]
Semi [;]
VSpace [\n]
HSpace [    ]
Ident [assert_eq]
ParenOpen [(]
Ident [list]
Dot [.]
Ident [capacity]
ParenOpen [(]
ParenClose [)]
Comma [,]
HSpace [ ]
Int [10]
ParenClose [)]
Semi [;]
VSpace [\n]
HSpace [    ]
Ident [assert_eq]
ParenOpen [(]
Error [@]
Ident [size_of]
ParenOpen [(]
Ident [list]
Dot [.]
Ident [data]
ParenOpen [(]
ParenClose [)]
ParenClose [)]
Comma [,]
HSpace [ ]
Int [10]
HSpace [ ]
Star [*]
HSpace [ ]
Int [8]
ParenClose [)]
Semi [;]
VSpace [\n\n]
HSpace [    ]
Let [let]
HSpace [ ]
Ident [list]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [ArrayList]
BracketOpen [[]
Ident [u8]
BracketClose []]
Dot [.]
Ident [new]
ParenOpen [(]
Int [32]
ParenClose [)]
Semi [;]
VSpace [\n]
HSpace [    ]
Ident [assert_eq]
ParenOpen [(]
Ident [list]
Dot [.]
Ident [length]
ParenOpen [(]
ParenClose [)]
Comma [,]
HSpace [ ]
Int [0]
ParenClose [)]
Semi [;]
VSpace [\n]
HSpace [    ]
Ident [assert_eq]
ParenOpen [(]
Ident [list]
Dot [.]
Ident [capacity]
ParenOpen [(]
ParenClose [)]
Comma [,]
HSpace [ ]
Int [32]
ParenClose [)]
Semi [;]
VSpace [\n]
HSpace [    ]
Ident [assert_eq]
ParenOpen [(]
Error [@]
Ident [size_of]
ParenOpen [(]
Ident [list]
Dot [.]
Ident [data]
ParenOpen [(]
ParenClose [)]
ParenClose [)]
Comma [,]
HSpace [ ]
Int [32]
HSpace [ ]
Star [*]
HSpace [ ]
Int [8]
ParenClose [)]
Semi [;]
VSpace [\n]
BraceClose [}]
VSpace [\n]

--- reports ---
Error: 
    ╭─[/home/simon/dev/rym/crates/rymx/tests/array_list.rym:19:40]
    │
 19 │     const MIN_NON_ZERO_CAP: usize = if @size_of(T) == 1 then
    │                                        ┬  
    │                                        ╰── Invalid character [@]
────╯

